OCaml 3.13.0:
-------------

- The official name of the language is now OCaml.
- Warning 28 is now enabled by default.

Language features:
- Added Generalized Abstract Data Types (GADTs) to the language. See
  testsuite/tests/typing-gadts for the syntax and some examples of
  use. Please use -principal for testing.
- It is now possible to omit type annotations when packing and unpacking
  first-class modules. The type-checker attempts to infer it from the context.
  Using the -principal option guarantees forward compatibility.
- New (module M) and (module M : S) syntax in patterns, for immediate
  unpacking of a first-class module.

Compilers:
- Revised simplification of let-alias (PR#5205, PR#5288)
- Better reporting of compiler version mismatch in .cmi files

Native-code compiler:
- Optimized handling of partially-applied functions (PR#5287)

Standard library:
- Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
- Hashtbl:
    . Statistically-better generic hash function based on Murmur 3 (PR#5225)
    . Fixed behavior of generic hash function w.r.t. -0.0 and NaN (PR#5222)
    . Added optional "seed" parameter to Hashtbl.create for diversification
    . Added new functorial interface "MakeSeeded" to support diversification
      with user-provided hash functions.

Bug Fixes:
- PR#5343: ocaml -rectypes is unsound wrt module subtyping
- PR#5322: type abbreviations expanding to a universal type variable
- PR#5330: thread tag with '.top' and '.inferred.mli' targets

Feature wishes:
- PR#5358: first class modules don't allow "with type" declarations for types in sub-modules
- PR#5411: new directive for the toplevel: #load_rec
- PR#5420: Unix.openfile share mode (Windows)

OCaml 3.12.1:
----------------------

Bug fixes:
- PR#4345, PR#4767: problems with camlp4 printing of float values
- PR#4380: ocamlbuild should not use tput on windows
- PR#4487, PR#5164: multiple 'module type of' are incompatible